# marketplace-reference-code

./: .gitignore  README.md
go/: Makefile  README.md  go.mod  go.sum
go/cmd/: main.go
go/internal/: step_1_validate_token.go  step_2_resolve_customer.go  step_3_approve_subscription.go
go/utils/: utils.go
python/: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/impl/: main.py  step_1_validate_token.py  step_2_resolve_customer.py
python/impl/utils/: formatting.py
python/marketplace_reference_code/: main.py  step_1_validate_token.py  step_2_resolve_customer.py  step_3_approve_subscription.py
python/marketplace_reference_code/utils/: exceptions.py  formatting.py
